[project]
name = "isp_programmer"
version = "1.2.0"
description='NXP ISP Cortex-M programming tool'
authors = [
    {name = "Simon Hobbs", email = "simon.hobbs@electrooptical.net"},
]
license = {file="LICENSE"}
readme = "README.md"

requires-python = ">=3.6"
keywords = ["isp", "nxp", "program", "uart"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
repository='https://github.com/snhobbs/NXPISP'
url='https://github.com/snhobbs/NXPISP'

[project.scripts]
isp_programmer = "isp_programmer.cli:main"
ISPProgrammer = "isp_programmer.cli:main"
isp-programmer-gui = "isp_programmer.gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "src/isp_programmer"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools.package-data]
isp_programmer= ["*.def", "*.ini"]

[tool.pylint]
max-line-length = 200
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "C0301",
    "W1203",
    "C0209"
]
