[project]
name = "ispprogrammer"
version = "1.3.1"
description='NXP ISP Cortex-M programming tool'
authors = [
    {name = "Simon Hobbs", email = "simon.hobbs@electrooptical.net"},
]
license = {file="LICENSE"}
readme = "README.md"

requires-python = ">=3.9"
keywords = ["isp", "nxp", "program", "uart"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyserial>=3.3",
    "intelhex>=2.3.0",
    "pycrc>=0.10.0",
    "click>=8.0.0",
]

[project.urls]
repository='https://github.com/snhobbs/isp-programmer'
url='https://github.com/snhobbs/isp-programmer'

[project.scripts]
ispprogrammer = "ispprogrammer.cli:main"
ISPProgrammer = "ispprogrammer.cli:main"
isp-programmer-gui = "ispprogrammer.gui:main"
ispprogrammer-gui = "ispprogrammer.gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "src/ispprogrammer"]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools.package-data]
ispprogrammer= ["*.def", "*.ini", "src/ispprogrammer/lpctools_parts.def"]

[tool.pylint]
max-line-length = 200
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "C0301",
    "W1203",
    "C0209"
]
